# serializer version: 1
# name: test_node_path_code[2_0]
  def forward(self, x : torch.Tensor):
      child_a = self.child_a(x);  x = None
      getitem = child_a[0]
      getitem_1 = getitem[0];  getitem = None
      getitem_2 = child_a[1];  child_a = None
      getitem_3 = getitem_2[0]
      getitem_4 = getitem_3[0]
      getitem_5 = getitem_4[0];  getitem_4 = None
      getitem_6 = getitem_3[1];  getitem_3 = None
      getitem_7 = getitem_2[1]
      getitem_8 = getitem_7[0]
      getitem_9 = getitem_8[0];  getitem_8 = None
      getitem_10 = getitem_7[1];  getitem_7 = None
      getitem_11 = getitem_2[2];  getitem_2 = None
      getitem_12 = getitem_11[0]
      getitem_13 = getitem_12[0];  getitem_12 = None
      getitem_14 = getitem_11[1];  getitem_11 = None
      linear_0 = getattr(self.linear, "0")(getitem_1);  getitem_1 = None
      add = linear_0 + 2
      linear_1 = getattr(self.linear, "1")(add);  add = None
      return ((linear_0,), [([getitem_5], getitem_6), ([getitem_9], getitem_10), ([getitem_13], getitem_14)], {'nested_dict': [(linear_1,)]})
# ---
# name: test_node_path_code[2_1]
  def forward(self, x : torch.Tensor):
      child_a = self.child_a(x);  x = None
      getitem = child_a[0]
      getitem_1 = getitem[0];  getitem = None
      getitem_2 = child_a[1];  child_a = None
      getitem_3 = getitem_2[0]
      getitem_4 = getitem_3[0]
      getitem_5 = getitem_4[0];  getitem_4 = None
      getitem_6 = getitem_3[1];  getitem_3 = None
      getitem_7 = getitem_2[1]
      getitem_8 = getitem_7[0]
      getitem_9 = getitem_8[0];  getitem_8 = None
      getitem_10 = getitem_7[1];  getitem_7 = None
      getitem_11 = getitem_2[2];  getitem_2 = None
      getitem_12 = getitem_11[0]
      getitem_13 = getitem_12[0];  getitem_12 = None
      getitem_14 = getitem_11[1];  getitem_11 = None
      linear_0 = getattr(self.linear, "0")(getitem_1);  getitem_1 = None
      add = linear_0 + 2
      linear_1 = getattr(self.linear, "1")(add);  add = None
      return ((linear_0,), [([getitem_5], getitem_6), ([getitem_9], getitem_10), ([getitem_13], getitem_14)], {'nested_dict': [(linear_1,)]})
# ---
# name: test_node_path_pretty_print[2_0]
  '''
  <root>: CompiledGraphModule
  ├─x: Tensor(10, 10)
  ├─child_a: CompiledGraphModule
  │ ├─a_inputs: Tensor(10, 10)
  │ ├─grandchildren_b_0: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_1: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_2: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_3: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─getitem_4: Tensor(10, 10)
  │ ├─mul: Tensor(10, 10)
  │ ├─clone: Tensor(10, 10)
  │ ├─grandchildren_b_1: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_5: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_6: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_7: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_8: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─getitem_9: Tensor(10, 10)
  │ ├─mul_1: Tensor(10, 10)
  │ ├─clone_1: Tensor(10, 10)
  │ ├─grandchildren_b_2: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_10: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_11: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_12: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_13: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─getitem_14: Tensor(10, 10)
  │ ├─mul_2: Tensor(10, 10)
  │ ├─clone_2: Tensor(10, 10)
  │ ├─a_linear: CompiledGraphModule
  │ │ ├─input: Tensor(10, 10)
  │ │ ├─weight: Tensor(10, 10)
  │ │ ├─bias: Tensor(10)
  │ │ ├─linear: Tensor(10, 10)
  │ │ └─output: Tensor(10, 10)
  │ └─output: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: list(3)
  │     ├─sub_0: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     ├─sub_1: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     └─sub_2: tuple(2)
  │       ├─sub_0: list(1)
  │       │ └─sub_0: Tensor(10, 10)
  │       └─sub_1: Tensor(10, 10)
  ├─getitem: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_1: Tensor(10, 10)
  ├─getitem_2: list(3)
  │ ├─sub_0: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ ├─sub_1: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ └─sub_2: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: Tensor(10, 10)
  ├─getitem_3: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_4: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_5: Tensor(10, 10)
  ├─getitem_6: Tensor(10, 10)
  ├─getitem_7: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_8: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_9: Tensor(10, 10)
  ├─getitem_10: Tensor(10, 10)
  ├─getitem_11: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_12: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_13: Tensor(10, 10)
  ├─getitem_14: Tensor(10, 10)
  ├─linear_0: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  ├─add: Tensor(10, 10)
  ├─linear_1: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  └─output: tuple(3)
    ├─sub_0: tuple(1)
    │ └─sub_0: Tensor(10, 10)
    ├─sub_1: list(3)
    │ ├─sub_0: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ ├─sub_1: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ └─sub_2: tuple(2)
    │   ├─sub_0: list(1)
    │   │ └─sub_0: Tensor(10, 10)
    │   └─sub_1: Tensor(10, 10)
    └─sub_2: dict(1)
      └─nested_dict: list(1)
        └─sub_0: tuple(1)
          └─sub_0: Tensor(10, 10)
  '''
# ---
# name: test_node_path_pretty_print[2_1]
  '''
  <root>: CompiledGraphModule
  ├─x: Tensor(10, 10)
  ├─child_a: CompiledGraphModule
  │ ├─a_inputs: Tensor(10, 10)
  │ ├─grandchildren_b_0: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_1: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_2: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_3: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─getitem_4: Tensor(10, 10)
  │ ├─mul: Tensor(10, 10)
  │ ├─clone: Tensor(10, 10)
  │ ├─grandchildren_b_1: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_5: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_6: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_7: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_8: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─getitem_9: Tensor(10, 10)
  │ ├─mul_1: Tensor(10, 10)
  │ ├─clone_1: Tensor(10, 10)
  │ ├─grandchildren_b_2: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_10: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_11: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_12: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_13: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─getitem_14: Tensor(10, 10)
  │ ├─mul_2: Tensor(10, 10)
  │ ├─clone_2: Tensor(10, 10)
  │ ├─a_linear: CompiledGraphModule
  │ │ ├─input: Tensor(10, 10)
  │ │ ├─weight: Tensor(10, 10)
  │ │ ├─bias: Tensor(10)
  │ │ ├─linear: Tensor(10, 10)
  │ │ └─output: Tensor(10, 10)
  │ └─output: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: list(3)
  │     ├─sub_0: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     ├─sub_1: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     └─sub_2: tuple(2)
  │       ├─sub_0: list(1)
  │       │ └─sub_0: Tensor(10, 10)
  │       └─sub_1: Tensor(10, 10)
  ├─getitem: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_1: Tensor(10, 10)
  ├─getitem_2: list(3)
  │ ├─sub_0: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ ├─sub_1: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ └─sub_2: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: Tensor(10, 10)
  ├─getitem_3: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_4: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_5: Tensor(10, 10)
  ├─getitem_6: Tensor(10, 10)
  ├─getitem_7: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_8: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_9: Tensor(10, 10)
  ├─getitem_10: Tensor(10, 10)
  ├─getitem_11: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_12: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_13: Tensor(10, 10)
  ├─getitem_14: Tensor(10, 10)
  ├─linear_0: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  ├─add: Tensor(10, 10)
  ├─linear_1: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  └─output: tuple(3)
    ├─sub_0: tuple(1)
    │ └─sub_0: Tensor(10, 10)
    ├─sub_1: list(3)
    │ ├─sub_0: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ ├─sub_1: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ └─sub_2: tuple(2)
    │   ├─sub_0: list(1)
    │   │ └─sub_0: Tensor(10, 10)
    │   └─sub_1: Tensor(10, 10)
    └─sub_2: dict(1)
      └─nested_dict: list(1)
        └─sub_0: tuple(1)
          └─sub_0: Tensor(10, 10)
  '''
# ---
# name: test_node_path_pretty_print[2_2]
  '''
  <root>: CompiledGraphModule
  ├─x: Tensor(10, 10)
  ├─child_a: CompiledGraphModule
  │ ├─a_inputs: Tensor(10, 10)
  │ ├─grandchildren_b_0: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_1: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_2: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_3: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─b_outputs_1: Tensor(10, 10)
  │ ├─mul: Tensor(10, 10)
  │ ├─clone: Tensor(10, 10)
  │ ├─grandchildren_b_1: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_5: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_6: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_7: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_8: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─b_outputs_2: Tensor(10, 10)
  │ ├─mul_1: Tensor(10, 10)
  │ ├─clone_1: Tensor(10, 10)
  │ ├─grandchildren_b_2: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_10: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_11: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_12: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_13: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─b_outputs_3: Tensor(10, 10)
  │ ├─mul_2: Tensor(10, 10)
  │ ├─clone_2: Tensor(10, 10)
  │ ├─a_linear: CompiledGraphModule
  │ │ ├─input: Tensor(10, 10)
  │ │ ├─weight: Tensor(10, 10)
  │ │ ├─bias: Tensor(10)
  │ │ ├─linear: Tensor(10, 10)
  │ │ └─output: Tensor(10, 10)
  │ └─output: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: list(3)
  │     ├─sub_0: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     ├─sub_1: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     └─sub_2: tuple(2)
  │       ├─sub_0: list(1)
  │       │ └─sub_0: Tensor(10, 10)
  │       └─sub_1: Tensor(10, 10)
  ├─getitem: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_1: Tensor(10, 10)
  ├─getitem_2: list(3)
  │ ├─sub_0: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ ├─sub_1: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ └─sub_2: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: Tensor(10, 10)
  ├─getitem_3: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_4: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_5: Tensor(10, 10)
  ├─getitem_6: Tensor(10, 10)
  ├─getitem_7: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_8: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_9: Tensor(10, 10)
  ├─getitem_10: Tensor(10, 10)
  ├─getitem_11: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_12: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_13: Tensor(10, 10)
  ├─getitem_14: Tensor(10, 10)
  ├─linear_0: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  ├─add: Tensor(10, 10)
  ├─linear_1: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  └─output: tuple(3)
    ├─sub_0: tuple(1)
    │ └─sub_0: Tensor(10, 10)
    ├─sub_1: list(3)
    │ ├─sub_0: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ ├─sub_1: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ └─sub_2: tuple(2)
    │   ├─sub_0: list(1)
    │   │ └─sub_0: Tensor(10, 10)
    │   └─sub_1: Tensor(10, 10)
    └─sub_2: dict(1)
      └─nested_dict: list(1)
        └─sub_0: tuple(1)
          └─sub_0: Tensor(10, 10)
  '''
# ---
# name: test_node_path_pretty_print[2_4]
  '''
  <root>: CompiledGraphModule
  ├─x: Tensor(10, 10)
  ├─child_a: CompiledGraphModule
  │ ├─a_inputs: Tensor(10, 10)
  │ ├─grandchildren_b_0: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_1: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_2: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_3: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─b_outputs: Tensor(10, 10)
  │ ├─mul: Tensor(10, 10)
  │ ├─clone: Tensor(10, 10)
  │ ├─grandchildren_b_1: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_5: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_6: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_7: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_8: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─b_outputs_1: Tensor(10, 10)
  │ ├─mul_1: Tensor(10, 10)
  │ ├─clone_1: Tensor(10, 10)
  │ ├─grandchildren_b_2: CompiledGraphModule
  │ │ ├─b_inputs: Tensor(10, 10)
  │ │ ├─a_inputs: Tensor(10, 10)
  │ │ ├─ones_like: Tensor(10, 10)
  │ │ ├─mul: Tensor(10, 10)
  │ │ ├─c: CompiledGraphModule
  │ │ │ ├─c_inputs: Tensor(10, 10)
  │ │ │ ├─inputs_2: Tensor(10, 10)
  │ │ │ ├─inputs_3: Tensor(10, 10)
  │ │ │ ├─inputs_4: Tensor(10, 10)
  │ │ │ ├─c_linear_0: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add: Tensor(10, 10)
  │ │ │ ├─c_linear_1: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ ├─add_1: Tensor(10, 10)
  │ │ │ ├─c_linear_2: CompiledGraphModule
  │ │ │ │ ├─input: Tensor(10, 10)
  │ │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ │ ├─bias: Tensor(10)
  │ │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ │ └─output: Tensor(10, 10)
  │ │ │ └─output: list(2)
  │ │ │   ├─sub_0: Tensor(10, 10)
  │ │ │   └─sub_1: tuple(2)
  │ │ │     ├─sub_0: Tensor(10, 10)
  │ │ │     └─sub_1: Tensor(10, 10)
  │ │ ├─getitem: Tensor(10, 10)
  │ │ ├─getitem_1: tuple(2)
  │ │ │ ├─sub_0: Tensor(10, 10)
  │ │ │ └─sub_1: Tensor(10, 10)
  │ │ ├─getitem_2: Tensor(10, 10)
  │ │ ├─getitem_3: Tensor(10, 10)
  │ │ ├─b_linear: CompiledGraphModule
  │ │ │ ├─input: Tensor(10, 10)
  │ │ │ ├─weight: Tensor(10, 10)
  │ │ │ ├─bias: Tensor(10)
  │ │ │ ├─linear: Tensor(10, 10)
  │ │ │ └─output: Tensor(10, 10)
  │ │ └─output: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: tuple(1)
  │ │         └─sub_0: tuple(1)
  │ │           └─sub_0: Tensor(10, 10)
  │ ├─getitem_10: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: tuple(1)
  │ │       └─sub_0: Tensor(10, 10)
  │ ├─getitem_11: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: tuple(1)
  │ │     └─sub_0: Tensor(10, 10)
  │ ├─getitem_12: tuple(1)
  │ │ └─sub_0: tuple(1)
  │ │   └─sub_0: Tensor(10, 10)
  │ ├─getitem_13: tuple(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ ├─b_outputs_2: Tensor(10, 10)
  │ ├─mul_2: Tensor(10, 10)
  │ ├─clone_2: Tensor(10, 10)
  │ ├─a_linear: CompiledGraphModule
  │ │ ├─input: Tensor(10, 10)
  │ │ ├─weight: Tensor(10, 10)
  │ │ ├─bias: Tensor(10)
  │ │ ├─linear: Tensor(10, 10)
  │ │ └─output: Tensor(10, 10)
  │ └─output: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: list(3)
  │     ├─sub_0: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     ├─sub_1: tuple(2)
  │     │ ├─sub_0: list(1)
  │     │ │ └─sub_0: Tensor(10, 10)
  │     │ └─sub_1: Tensor(10, 10)
  │     └─sub_2: tuple(2)
  │       ├─sub_0: list(1)
  │       │ └─sub_0: Tensor(10, 10)
  │       └─sub_1: Tensor(10, 10)
  ├─getitem: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_1: Tensor(10, 10)
  ├─getitem_2: list(3)
  │ ├─sub_0: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ ├─sub_1: tuple(2)
  │ │ ├─sub_0: list(1)
  │ │ │ └─sub_0: Tensor(10, 10)
  │ │ └─sub_1: Tensor(10, 10)
  │ └─sub_2: tuple(2)
  │   ├─sub_0: list(1)
  │   │ └─sub_0: Tensor(10, 10)
  │   └─sub_1: Tensor(10, 10)
  ├─getitem_3: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_4: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_5: Tensor(10, 10)
  ├─getitem_6: Tensor(10, 10)
  ├─getitem_7: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_8: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_9: Tensor(10, 10)
  ├─getitem_10: Tensor(10, 10)
  ├─getitem_11: tuple(2)
  │ ├─sub_0: list(1)
  │ │ └─sub_0: Tensor(10, 10)
  │ └─sub_1: Tensor(10, 10)
  ├─getitem_12: list(1)
  │ └─sub_0: Tensor(10, 10)
  ├─getitem_13: Tensor(10, 10)
  ├─getitem_14: Tensor(10, 10)
  ├─linear_0: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  ├─add: Tensor(10, 10)
  ├─linear_1: CompiledGraphModule
  │ ├─input: Tensor(10, 10)
  │ ├─weight: Tensor(10, 10)
  │ ├─bias: Tensor(10)
  │ ├─linear: Tensor(10, 10)
  │ └─output: Tensor(10, 10)
  └─output: tuple(3)
    ├─sub_0: tuple(1)
    │ └─sub_0: Tensor(10, 10)
    ├─sub_1: list(3)
    │ ├─sub_0: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ ├─sub_1: tuple(2)
    │ │ ├─sub_0: list(1)
    │ │ │ └─sub_0: Tensor(10, 10)
    │ │ └─sub_1: Tensor(10, 10)
    │ └─sub_2: tuple(2)
    │   ├─sub_0: list(1)
    │   │ └─sub_0: Tensor(10, 10)
    │   └─sub_1: Tensor(10, 10)
    └─sub_2: dict(1)
      └─nested_dict: list(1)
        └─sub_0: tuple(1)
          └─sub_0: Tensor(10, 10)
  '''
# ---
